[FIX] style.css 팝업 z-index 조정

--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -13,7 +13,6 @@
   top: 40px;
 	left: 40px;
   padding: 20px 30px;
-  z-index: 9999;
   border-color: var(--dark-blue);
 	border-width: 7px;
 	box-sizing: border-box;
